src/widgets/note-form/ui/NoteForm.module.css
:root {
	--textarea-padding: 28px;
	--button-size: 48px;
}

/* form */
.form {
	right: 0;
	left: 0;
	z-index: 240;
	max-width: var(--app-width);
	padding-inline: var(--app-inline-padding);
	margin: 0 auto;
	background-image: unset;
}

.form textarea {
	width: 100%;
	padding: var(--textarea-padding);
	font-size: 1rem;
	line-height: 1.5rem;
	resize: none;
	box-shadow: unset;
}

.form textarea:focus {
	outline: unset;
}

.actionButton {
	position: absolute;
	right: var(--textarea-padding);
	bottom: calc(
		env(safe-area-inset-bottom, 0px) +
		var(--textarea-padding) +
		0.5rem +
		1px
	);
	z-index: 250;
	width: var(--button-size);
	height: var(--button-size);
	border-radius: var(--border-radius-secondary);
}

.actionButton svg {
	width: 22px;
	height: 22px;
}

.actionButton:disabled {
	color: var(--color-secondary);
	background-color: var(--bg-color-tertiary);
}

